--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@ doc/api/
 .flutter-plugins-dependencies
 
 .idea/
+
+lib/git_versions.dart
+
+scripts/linux/CMakeLists/sparkmobile/CMakeLists.txt
+
+scripts/linux/CMakeLists/secp256k1/CMakeLists.txt
+
+scripts/linux/sparkmobile
