--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  test: ^1.24.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  ffigen: ^9.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -76,3 +78,13 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
+
+ffigen:
+  name: flutter_libsparkmobile
+  description: Bindings for sparkmobile.
+  language: c
+  output: 'lib/sparkmobile_bindings.dart'
+  headers:
+    entry-points:
+      - 'scripts/linux/sparkmobile/src/dart_interface.h'
+      # copyCMakeLists.sh creates this header, see build_all.sh.
