--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,3 +88,9 @@ ffigen:
     entry-points:
       - 'scripts/linux/sparkmobile/src/dart_interface.h'
       # copyCMakeLists.sh creates this header, see build_all.sh.
+  preamble: |
+    // ignore_for_file: camel_case_types, non_constant_identifier_names, unused_element, unused_field, return_of_invalid_type, void_checks, annotate_overrides, no_leading_underscores_for_local_identifiers, library_private_types_in_public_api
+  exclude-all-by-default: true
+  functions:
+    include:
+      - generateSpendKey
