--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ environment:
   flutter: ">=3.3.0"
 
 dependencies:
+  ffi: ^2.1.0
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   test: ^1.24.1
+  typed_data: ^1.3.2
 
 dev_dependencies:
   flutter_test:
@@ -80,10 +82,10 @@ flutter:
   # https://flutter.dev/custom-fonts/#from-packages
 
 ffigen:
-  name: flutter_libsparkmobile
+  name: SparkMobileBindings
   description: Bindings for sparkmobile.
   language: c
-  output: 'lib/sparkmobile_bindings.dart'
+  output: 'lib/flutter_libsparkmobile_bindings.dart'
   headers:
     entry-points:
       - 'scripts/linux/sparkmobile/src/dart_interface.h'
