--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   coinlib_flutter: ^1.0.0
+  bip39: ^1.0.6
 
 dev_dependencies:
   integration_test:
