migrate to ffi plugin

--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,6 @@ doc/api/
 
 .idea/
 
-lib/git_versions.dart
-
 # Ignore build artifacts.
-scripts/*/cache/
-scripts/*/sparkmobile
-scripts/*/CMakeLists/sparkmobile/CMakeLists.txt
-scripts/*/CMakeLists/secp256k1/CMakeLists.txt
+src/build
+src/deps/sparkmobile
