--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_libsparkmobile
-description: A new Flutter plugin project.
+description: Flutter Sparkmobile ffi wrapper
 version: 0.0.1
 homepage:
 
@@ -12,14 +12,12 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
-  test: ^1.24.1
-  typed_data: ^1.3.2
 
 dev_dependencies:
+  ffigen: ^6.1.2
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  ffigen: ^9.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -36,19 +34,20 @@ flutter:
   # This is required for using `dart:ffi`.
   # All these are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
+  #
+  # Please refer to README.md for a detailed explanation.
   plugin:
     platforms:
       android:
-        package: com.cypherstack.flutter_libsparkmobile
-        pluginClass: FlutterLibsparkmobilePlugin
+        ffiPlugin: true
       ios:
-        pluginClass: FlutterLibsparkmobilePlugin
+        ffiPlugin: true
       linux:
-        pluginClass: FlutterLibsparkmobilePlugin
+        ffiPlugin: true
       macos:
-        pluginClass: FlutterLibsparkmobilePlugin
+        ffiPlugin: true
       windows:
-        pluginClass: FlutterLibsparkmobilePluginCApi
+        ffiPlugin: true
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
@@ -80,15 +79,3 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
-
-ffigen:
-  name: SparkMobileBindings
-  description: Bindings for sparkmobile.
-  language: c
-  output: 'lib/flutter_libsparkmobile_bindings.dart'
-  headers:
-    entry-points:
-      - 'sparkmobile/src/dart_interface.h'
-      # copyCMakeLists.sh creates this header, see build_all.sh.
-  preamble: |
-    // ignore_for_file: camel_case_types, non_constant_identifier_names, unused_element, unused_field, return_of_invalid_type, void_checks, annotate_overrides, no_leading_underscores_for_local_identifiers, library_private_types_in_public_api
