--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@ doc/api/
 .idea/
 
 # Ignore build artifacts.
+src/deps/sparkmobile/CMakeLists.txt
+src/deps/sparkmobile/secp256k1/CMakeLists.txt
 src/build
-src/deps/sparkmobile
