WIP android build (boost issues)

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,5 +55,14 @@ android {
 
     defaultConfig {
         minSdkVersion 16
+        ndkVersion = "21.1.6352462"
+
+        externalNativeBuild {
+            cmake {
+                arguments "-DBUILD_FOR_SYSTEM_NAME=android", "-DANDROID_STL=c++_shared", "-DANDROID_TOOLCHAIN=clang -v"
+                cppFlags "-frtti -fexceptions -v -DANDROID -std=c++17"
+                abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+            }
+        }
     }
 }
