--- a/src/deps/CMakeLists/secp256k1/CMakeLists.txt
+++ b/src/deps/CMakeLists/secp256k1/CMakeLists.txt
@@ -15,7 +15,13 @@ ADD_DEFINITIONS(-DUSE_ENDOMORPHISM=1)
 ADD_DEFINITIONS(-DUSE_NUM_NONE=1)
 ADD_DEFINITIONS(-DUSE_FIELD_INV_BUILTIN=1)
 ADD_DEFINITIONS(-DUSE_SCALAR_INV_BUILTIN=1)
-ADD_DEFINITIONS(-fPIC)
+
+if(BUILD_FOR_SYSTEM_NAME STREQUAL "android")
+	# nothing
+else()
+	ADD_DEFINITIONS(-fPIC)
+endif()
+
 
 LINK_DIRECTORIES(${OPENSSL_LIBRARIES_DIR})
 
