--- a/android/build.gradle
+++ b/android/build.gradle
@@ -61,7 +61,8 @@ android {
             cmake {
                 arguments "-DBUILD_FOR_SYSTEM_NAME=android", "-DANDROID_STL=c++_shared", "-DANDROID_TOOLCHAIN=clang -v"
                 cppFlags "-frtti -fexceptions -v -DANDROID -std=c++17"
-                abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+                abiFilters  'x86_64', 'arm64-v8a'
+//                abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
             }
         }
     }
