--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ doc/api/
 .flutter-plugins
 .flutter-plugins-dependencies
 
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
 .idea/
 
 example/ios/Podfile.lock
