WIP secp256k1 scripts

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ scripts/ios/build
 src/deps/sparkmobile/CMakeLists.txt
 src/deps/sparkmobile/secp256k1/CMakeLists.txt
 src/build
+
+scripts/windows/CMakeLists/secp256k1/CMakeLists.txt
