ignore windows cache file

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ src/deps/sparkmobile/secp256k1/CMakeLists.txt
 src/build
 
 scripts/windows/CMakeLists/secp256k1/CMakeLists.txt
+
+scripts/windows/cache/
