--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -42,7 +42,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  coinlib_flutter: ^1.0.0
+  coinlib_flutter:
+    git:
+      url: https://github.com/cypherstack/coinlib.git
+      path: coinlib_flutter
+      ref: windows # TODO change to main.  TODO update to windows-2.0 branch.
+      # TODO pin to specific commit to reduce supply chain attack surface.  
   bip39: ^1.0.6
 
 dev_dependencies:
