set OPENSSL_LIBRARIES_DIR and don't link unnecessary libraries

--- a/src/deps/CMakeLists/secp256k1/CMakeLists.txt
+++ b/src/deps/CMakeLists/secp256k1/CMakeLists.txt
@@ -3,6 +3,11 @@
 cmake_minimum_required(VERSION 3.1)
 project(secp256k1_spark)
 
+SET(OPENSSL_ROOT_DIR "${CMAKE_CURRENT_BINARY_DIR}/../")
+SET(OPENSSL_LIBRARIES_DIR "${OPENSSL_ROOT_DIR}lib")
+SET(OPENSSL_INCLUDE_DIR "${OPENSSL_ROOT_DIR}include")
+SET(OPENSSL_LIBRARIES "ssl" "crypto")
+
 SET(ENABLE_MODULE_ECDH 1)
 ADD_DEFINITIONS(-DENABLE_MODULE_ECDH=1)
 ADD_DEFINITIONS(-DUSE_ENDOMORPHISM=1)
@@ -15,7 +20,6 @@ if(BUILD_FOR_SYSTEM_NAME STREQUAL "android")
 else()
 	ADD_DEFINITIONS(-fPIC)
 endif()
-
 
 LINK_DIRECTORIES(${OPENSSL_LIBRARIES_DIR})
 
