include openssl includes on windows instead of using find_package

--- a/src/deps/CMakeLists/sparkmobile/CMakeLists.txt
+++ b/src/deps/CMakeLists/sparkmobile/CMakeLists.txt
@@ -15,7 +15,18 @@ SET(OPENSSL_INCLUDE_DIR "${OPENSSL_ROOT_DIR}/include")
 set(OPENSSL_USE_STATIC_LIBS TRUE)
 list(APPEND CMAKE_FIND_ROOT_PATH "${OPENSSL_ROOT_DIR}")
 
-find_package(OpenSSL REQUIRED)
+if(BUILD_FOR_SYSTEM_NAME STREQUAL "windows" OR WIN32)
+    SET(OPENSSL_ROOT_DIR "${CMAKE_CURRENT_BINARY_DIR}/../")
+    SET(OPENSSL_LIBRARIES_DIR "${OPENSSL_ROOT_DIR}lib")
+    SET(OPENSSL_INCLUDE_DIR "${OPENSSL_ROOT_DIR}include")
+    SET(OPENSSL_LIBRARIES "ssl" "crypto")
+
+    LINK_DIRECTORIES(${OPENSSL_LIBRARIES_DIR})
+
+    include_directories(. include)
+else()
+    find_package(OpenSSL REQUIRED)
+endif()
 
 SET(OPENSSL_LIBRARIES_DIR "${OPENSSL_ROOT_DIR}/lib")
 
