add openssl-cmake submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "src/deps/boost-cmake"]
 	path = src/deps/boost-cmake
 	url = https://github.com/Orphis/boost-cmake
+[submodule "src/deps/openssl-cmake"]
+	path = src/deps/openssl-cmake
+	url = https://github.com/janbar/openssl-cmake
