--- a/src/deps/CMakeLists/sparkmobile/CMakeLists.txt
+++ b/src/deps/CMakeLists/sparkmobile/CMakeLists.txt
@@ -69,7 +69,7 @@ set_property(SOURCE src/spark.cpp
 
 LINK_DIRECTORIES(${OPENSSL_LIBRARIES_DIR})
 
-if(BUILD_FOR_SYSTEM_NAME STREQUAL "ios")
+if(BUILD_FOR_SYSTEM_NAME STREQUAL "ios" OR BUILD_FOR_SYSTEM_NAME STREQUAL "windows")
     SET(CUSTOM_LIB_TYPE STATIC)
 else()
     SET(CUSTOM_LIB_TYPE SHARED)
