--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.10)
 
 # Project-level configuration.
 set(PROJECT_NAME "flutter_libsparkmobile")
-set(PROJECT_SYSTEM_NAME "linux")
+set(BUILD_FOR_SYSTEM_NAME "linux")
 
 project(${PROJECT_NAME} LANGUAGES CXX)
 
