--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,8 +35,9 @@ set(BOOST_URL "https://boostorg.jfrog.io/artifactory/main/release/1.71.0/source/
 set(BOOST_URL_SHA256 "85a94ac71c28e59cf97a96714e4c58a18550c227ac8b0388c260d6c717e47a69")
 add_subdirectory("deps/boost-cmake")
 
-set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/install CACHE PATH comment FORCE)
-add_subdirectory("deps/openssl-cmake")
+if(BUILD_FOR_SYSTEM_NAME STREQUAL "windows")
+    add_subdirectory("deps/openssl-cmake")
+endif()
 
 add_subdirectory("deps/sparkmobile")
 
