--- a/src/deps/CMakeLists/sparkmobile/CMakeLists.txt
+++ b/src/deps/CMakeLists/sparkmobile/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
 set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
 project(sparkmobile)
 
-if(BUILD_FOR_SYSTEM_NAME STREQUAL "linux")
+if(BUILD_FOR_SYSTEM_NAME STREQUAL "linux" OR BUILD_FOR_SYSTEM_NAME STREQUAL "windows")
     ADD_DEFINITIONS(-fPIC)
 endif()
 
