prebuild in cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,15 @@ cmake_minimum_required(VERSION 3.10)
 
 project(flutter_libsparkmobile_library VERSION 0.0.1)
 
+SET(SPARK_SCRIPTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../scripts")
+if(BUILD_FOR_SYSTEM_NAME STREQUAL "windows")
+    SET(SPARK_PREBUILD_SCRIPT "prebuild.bat")
+else()
+    SET(SPARK_PREBUILD_SCRIPT "prebuild.sh")
+endif()
+execute_process (COMMAND "${SPARK_SCRIPTS_DIR}/${SPARK_PREBUILD_SCRIPT}"
+        WORKING_DIRECTORY "${SPARK_SCRIPTS_DIR}")
+
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
 
 if(BUILD_FOR_SYSTEM_NAME STREQUAL "macos" OR BUILD_FOR_SYSTEM_NAME STREQUAL "ios" OR BUILD_FOR_SYSTEM_NAME STREQUAL "windows")
