--- a/src/deps/CMakeLists/secp256k1/CMakeLists.txt
+++ b/src/deps/CMakeLists/secp256k1/CMakeLists.txt
@@ -16,7 +16,7 @@ else()
 	ADD_DEFINITIONS(-fPIC)
 endif()
 
-if(BUILD_FOR_SYSTEM_NAME STREQUAL "windows" OR BUILD_FOR_SYSTEM_NAME STREQUAL "macos")
+if(SPARK_USE_OPENSSL_CMAKE)
 	#nothing
 else()
 	LINK_DIRECTORIES(${OPENSSL_LIBRARIES_DIR})
@@ -77,7 +77,7 @@ endif()
 # TODO: emult static precomputation
 # TODO: ecdh module
 # TODO: RECOVERY module
-if(BUILD_FOR_SYSTEM_NAME STREQUAL "windows" OR BUILD_FOR_SYSTEM_NAME STREQUAL "macos")
+if(SPARK_USE_OPENSSL_CMAKE)
 	TARGET_INCLUDE_DIRECTORIES(secp256k1_spark PUBLIC)
 else()
 	TARGET_INCLUDE_DIRECTORIES(secp256k1_spark PUBLIC ${OPENSSL_INCLUDE_DIR})
