static linking of sparkmobile for macos

--- a/src/deps/CMakeLists/sparkmobile/CMakeLists.txt
+++ b/src/deps/CMakeLists/sparkmobile/CMakeLists.txt
@@ -56,7 +56,10 @@ set_property(SOURCE src/spark.cpp
     src/util.cpp
     PROPERTY COMPILE_FLAGS ${MY_CUSTOM_COMPILE_FLAGS} )
 
-if(BUILD_FOR_SYSTEM_NAME STREQUAL "ios" OR BUILD_FOR_SYSTEM_NAME STREQUAL "linux" OR BUILD_FOR_SYSTEM_NAME STREQUAL "windows")
+if(BUILD_FOR_SYSTEM_NAME STREQUAL "ios" OR
+        BUILD_FOR_SYSTEM_NAME STREQUAL "macos" OR
+        BUILD_FOR_SYSTEM_NAME STREQUAL "linux" OR
+        BUILD_FOR_SYSTEM_NAME STREQUAL "windows")
     SET(CUSTOM_LIB_TYPE STATIC)
 else()
     SET(CUSTOM_LIB_TYPE SHARED)
