--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -42,11 +42,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  coinlib_flutter:
-    git:
-      url: https://github.com/cypherstack/coinlib.git
-      path: coinlib_flutter
-      ref: 376d520b4516d4eb7c3f0bd4b1522f7769f3f2a7
+  coinlib_flutter: ^3.0.0
   bip39: ^1.0.6
   logger: ^2.5.0
 
